# TasksQueue

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE_HEADER  README.md  conanfile.py  sonar-project.properties
.github/workflows/: analyzers.yml  ci.yml
cmake/: conan_provider.cmake  coverage.cmake  coverage_impl.cmake  dependencies.cmake  macros.cmake  variables.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  test.cpp
src/libraries/: CMakeLists.txt
src/libraries/backend/: CMakeLists.txt
src/libraries/backend/data_storage/in_memory_storage/: in_memory_storage.cpp  in_memory_storage.hpp
src/libraries/backend/data_storage/interface/: CMakeLists.txt  data_storage.hpp  data_storage_mock.hpp
src/libraries/backend/data_storage/ut/: storages_ut.cpp
src/libraries/backend/interface/task/: task.hpp
src/libraries/backend/server/: CMakeLists.txt  backend_server.cpp  backend_server.hpp  test.proto
src/libraries/backend/server/router/: CMakeLists.txt
src/libraries/backend/server/server_impl/: CMakeLists.txt
src/libraries/backend/server/ut/: backed_server_ut.cpp  backend_server_ut.cpp
src/libraries/backend/tasks_manager/: tasks_manager.cpp  tasks_manager.hpp
src/libraries/backend/tasks_manager/ut/: tasks_manager_ut.cpp
src/libraries/connection/: CMakeLists.txt
src/libraries/connection/rest_server/: CMakeLists.txt  rest_server.cpp  rest_server.hpp  server_config.hpp
src/libraries/connection/rest_server/impl/: CMakeLists.txt  rest_server_impl.cpp  rest_server_impl.hpp
src/libraries/connection/rest_server/interface/: CMakeLists.txt  server_config.hpp
src/libraries/connection/rest_server/ut/: rest_server_ut.cpp
src/libraries/core/: CMakeLists.txt
src/libraries/core/data_storage/: CMakeLists.txt
src/libraries/core/data_storage/in_memory_storage/: in_memory_storage.cpp  in_memory_storage.hpp
src/libraries/core/data_storage/interface/: CMakeLists.txt  data_storage.hpp
src/libraries/core/data_storage/ut/: storages_ut.cpp
src/libraries/core/interface/: CMakeLists.txt
src/libraries/core/interface/task/: CMakeLists.txt  task.hpp
src/libraries/core/interfaces/: CMakeLists.txt
src/libraries/core/interfaces/data_storage/: CMakeLists.txt  data_storage.hpp
src/libraries/core/storages/: CMakeLists.txt
src/libraries/core/task/: CMakeLists.txt  task.cpp  task.hpp
src/libraries/core/tasks_manager/: CMakeLists.txt  tasks_manager.cpp  tasks_manager.hpp
src/libraries/rest/: CMakeLists.txt
src/libraries/rest/core/: CMakeLists.txt  rest_core.cpp  rest_core.hpp
src/libraries/rest/interface/: CMakeLists.txt  rest_interface.hpp
src/libraries/rest/rest_server/: CMakeLists.txt  rest_server.cpp  rest_server.hpp
src/libraries/rest/rest_server_router/: CMakeLists.txt  rest_server_router.cpp  rest_server_router.hpp
src/libraries/rest/router/: CMakeLists.txt  rest_router.cpp  rest_router.hpp
src/libraries/rest/server/: CMakeLists.txt  rest_server.cpp  rest_server.hpp
src/libraries/task/: CMakeLists.txt
src/libraries/test_utils/: CMakeLists.txt  test_utils.hpp
src/libraries/utils/: CMakeLists.txt  utils.hpp
(+13 files in other folders)
